@@ -2728,7 +2728,7 @@ static int	DCconfig_get_normal_poller_items(unsigned char poller_type, unsigned 
 				continue;
 			break;
 		default:
-			/* nothink to do */;
+			/* nothing to do */;
 		}
 
 		DCget_host(&items[num].host, dc_host);
@@ -2941,7 +2941,7 @@ int	DCconfig_get_normal_poller_nextcheck(unsigned char poller_type, unsigned cha
 				continue;
 			break;
 		default:
-			/* nothink to do */;
+			/* nothing to do */;
 		}
 
 		nextcheck = dc_item->nextcheck;
